Made it look better on mobile, the quick way

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
         <div class="w3-center w3-padding-64">
             <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">About 313</span>
         </div>
-        <div class="w3-half w3-margin-bottom">
+        <div class="w3-center w3-margin-bottom">
             <h3>Emily Lindenbaum</h3>
             <p class="w3-opacity">Art Therpist</p>
-            <p style="text-align:justify;">Emily graduated from of the Masters in Education Art Therapy program at Wayne State.
+            <p style="text-align:justify;"><img src="images/me.jpg" alt="Me" style="float:right; padding: 0px 0px 20px 20px;"/>Emily graduated from of the Masters in Education Art Therapy program at Wayne State.
                 She has a B.B.A in Marketing from the Seidman College of Business at Grand Valley State University.
                 After receiving her degree, Emily moved to Detroit to work in advertising and pursue her M.Ed. in Art
                 Therapy
@@ -151,11 +151,12 @@
                 taking a Humanistic approach by also providing psychoeducational knowledge through using different art
                 media.
                 Emily enjoys photography, cooking, being on her boat in the summer, and hanging out with her
-                dog, Henry in her free time.</p>
+                dog, Henry in her free time.
+                </p>
         </div>
-        <div class="w3-half w3-margin-bottom">
-            <img src="images/me.jpg" alt="Me"/>
-        </div>
+<!--        <div class="w3-half w3-margin-bottom">-->
+<!--            <img src="images/me.jpg" alt="Me" style="float:right"/>-->
+<!--        </div>-->
     </div>
 </div>
 
